feat: implement blog-posts index and show item by id + swagger update + test
